--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
   <properties>
     <java.version>17</java.version>
+    <kotlin.version>1.7.20</kotlin.version>
   </properties>
 
   <modules>
